bk_ida/gobmkida/g0/print_eye
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/print_eye/src/engine/optics.c:1221:11: error: use of undeclared identifier 'byte_4D69ED'
gprintf( &byte_4D69ED); 
          ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/print_eye/src/engine/optics.c:1233:10: error: use of undeclared identifier 'off_4D69FE'
gprintf( off_4D69FE); 
         ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/print_eye/src/obj/1/optics.o] Error 1
